--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
             <div class="service-bottom">
                 <div class="service-item">
                     <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-                    <h2>Web Design</h2>
+                    <h2>Marketeur digital</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed architecto placeat beatae tenetur officia quod</p>
                 </div>
                 <div class="service-item">
                     <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-                    <h2>Web Design</h2>
+                    <h2>DEVELOPPEUR WEB</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed architecto placeat beatae tenetur officia quod</p>
                 </div>
                 <div class="service-item">
                     <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-                    <h2>Web Design</h2>
+                    <h2>Gest. Data base</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed architecto placeat beatae tenetur officia quod</p>
                 </div>
                 <div class="service-item">
                     <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-                    <h2>Web Design</h2>
+                    <h2>WEB DESIGN&nbsp;</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed architecto placeat beatae tenetur officia quod</p>
                 </div>
             </div>
@@ -93,8 +93,7 @@
                     <div class="project-info">
                         <h1>Projet 1</h1>
                         <h2>Web Site for E.M.G.</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat
-                            animi, fugit architecto voluptatum odit et!</p>
+                        <p>C'est un site à multi système, dès que tous les opérations seronten marche nous vous le ferons découvrir le reste du fonctionnement.&nbsp;</p>
                     </div>
                     <div class="project-img">
                         <img src="./img/img-1.png" alt="img">
@@ -104,8 +103,7 @@
                     <div class="project-info">
                         <h1>Projet 2</h1>
                         <h2>Green Hotel</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat
-                            animi, fugit architecto voluptatum odit et!</p>
+                        <p>Ce projet d'hôtel a pour but de mettre en valeur les arrangements intérieurs de manière à ce qu, même si les clients sont venus en masse les agents de la reception seront à mesure de les enregistrer avec fiabilité.&nbsp;&nbsp;</p>
                     </div>
                     <div class="project-img">
                         <img src="./img/Green_hotel.png" alt="img">
@@ -114,9 +112,8 @@
                 <div class="project-item">
                     <div class="project-info">
                         <h1>Projet 3</h1>
-                        <h2>Discount-sale-popup_html</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat
-                            animi, fugit architecto voluptatum odit et!</p>
+                      <h2>Discount-sale-popup_html</h2>
+                        <p>C'est un projet qui vise de créer un pop-up énorme pour lagestion du temps sur des offres.&nbsp; &nbsp;</p>
                     </div>
                     <div class="project-img">
                         <img src="./img/Discount.png" alt="img">
@@ -126,8 +123,7 @@
                     <div class="project-info">
                         <h1>Projet 4</h1>
                         <h2>Product-discount-calculator_html</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat
-                            animi, fugit architecto voluptatum odit et!</p>
+                        <p>Exercice sur le calcul de pourcentage du marché.&nbsp; &nbsp; &nbsp;</p>
                     </div>
                     <div class="project-img">
                         <img src="./img/Calcul.png" alt="img">
@@ -137,8 +133,7 @@
                     <div class="project-info">
                         <h1>Projet 5</h1>
                         <h2>Zodiac-sign-finder_html</h2>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt harum? Ipsum repellat
-                            animi, fugit architecto voluptatum odit et!</p>
+                        <p>Projet de detection automatique de signes zodiaque, tout en séléctionnant votre date de naissance.&nbsp;&nbsp;</p>
                     </div>
                     <div class="project-img">
                         <img src="./img/Zodiac.png" alt="img">
@@ -159,10 +154,10 @@
             </div>
             <div class="col-right">
                 <h1 class="section-title">À Propos de <span>moi</span></h1>
-                <h2>Developeur Front-End</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, velit alias eius non illum beatae atque repellat ratione qui veritatis repudiandae adipisci maiores. At inventore necessitatibus deserunt exercitationem cumque earum
-                    omnis ipsum rem accusantium quis, quas quia, accusamus provident suscipit magni! Expedita sint ad dolore, commodi labore nihil velit earum ducimus nulla quae nostrum fugit aut, deserunt reprehenderit libero enim!</p>
-                <a href="#" class="cta">Download Résumé</a>
+              <h2>Developeur Front-End</h2>
+              <p>Salut à tout le mond, je suis Vital MUSHALE autrement appelé &nbsp; &nbsp;<strong>Vmcode </strong>Je suis étudiant en informatique de gestion évoluant dans le secteur professionnel qui est <strong>La Haute Ecole de Commerce de Kinshasa </strong>dont<strong> (HEC) </strong>en sigle.</p>
+                <p>Pour en savoir plus sur moi je vous prie de cliquer fort sur le bouton là dessous&nbsp;👇&nbsp;</p>
+<a href="#" class="cta"><strong>Télécharger le Résumé</strong> </a>
             </div>
         </div>
     </section>
@@ -176,7 +171,7 @@
             </div>
             <div class="contact-items">
                 <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" /></div>
+                    <div class="icon"><img src="img/Appel.png" /></div>
                     <div class="contact-info">
                         <h1>Phone</h1>
                         <h2>+243 832 241 151</h2>
@@ -184,7 +179,7 @@
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
+                    <div class="icon"><img src="img/téléchargé.png" /></div>
                     <div class="contact-info">
                         <h1>Email</h1>
                         <h2>vmushale@gmail.com</h2>
@@ -192,7 +187,7 @@
                     </div>
                 </div>
                 <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
+                    <div class="icon"><img src="img/535137(0).png" /></div>
                     <div class="contact-info">
                         <h1>Addresse</h1>
                         <h2>Kimbanseke, Kinshasa, RD Congo</h2>
@@ -212,16 +207,16 @@
             <h2>Votre Portfolio de solution complète</h2>
             <div class="social-icon">
                 <div class="social-item">
-                    <a href="#"><img src="https://www.flaticon.com/free-icons/facebook" /></a>
+                    <a href="#"><img src="img/facebook (2).png" /></a>
                 </div>
                 <div class="social-item">
-                    <a href="#"><img src="https://www.flaticon.com/free-icons/instagram" /></a>
+                    <a href="#"><img src="img/instagram (2).png" /></a>
                 </div>
                 <div class="social-item">
-                    <a href="#"><img src="https://www.flaticon.com/free-icons/twitter-logo" /></a>
+                    <a href="#"><img src="img/twitter (2).png" /></a>
                 </div>
                 <div class="social-item">
-                    <a href="#"><img src="https://www.flaticon.com/free-icons/youtube" /></a>
+                    <a href="#"><img src="img/youtube (2).png" /></a>
                 </div>
             </div>
             <p>Copyright © 2025 Vmcode. Tous droits reservés</p>
